# comparative-gsa

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
inputs/: parameters_naghavi_constrained.json  parameters_naghavi_constrained_fixed_T_v_tot.json  parameters_naghavi_constrained_fixed_T_v_tot_v_ref.json  parameters_naghavi_constrained_fixed_T_v_tot_v_ref_lower_k_pas.json  parameters_naghavi_constrained_fixed_T_v_tot_v_ref_lower_k_pas_ao_r_c_ranges.json  parameters_naghavi_constrained_fixed_T_v_tot_v_ref_lower_k_pas_further.json
notebooks/: 01_emulation_sensitivity.ipynb  ae_sa.ipynb  ae_sa.py  ae_sa_small.ipynb  direct_pipeline.ipynb  direct_pipeline_do_sa.ipynb  direct_pipeline_gen_simulations.ipynb  direct_pipeline_gen_simulations_loop.ipynb  emulate_pipeline.ipynb  emulate_pipeline_do_sa.ipynb  emulate_pipeline_do_sa_non_ae.ipynb  emulate_pipeline_gen_simulations.ipynb  emulate_pipeline_sanity_check.ipynb  emulate_pipeline_train_emulators.ipynb  emulate_pipeline_train_emulators_do_sa.ipynb  emulate_pipeline_train_emulators_loop.ipynb  issue_29_sanity_check.ipynb  pipeline.ipynb  sa.ipynb  sa_figures_aligned.ipynb  sa_pipeline.ipynb  sa_pipeline_loop_emulators.ipynb  sa_pipeline_loop_simulations.ipynb
sandbox/: Batch_Kora.ipynb  Batch_Naghavi.ipynb  ROI.csv  Simulation.ipynb  Untitled-1.ipynb  ae_levan.ipynb  ae_naghavi copy 2.ipynb  ae_naghavi copy.ipynb  ae_naghavi.ipynb  ae_naghavi_1024.ipynb  ae_naghavi_2048.ipynb  ae_naghavi_32768.ipynb  ae_naghavi_4096.ipynb  ae_naghavi_exp.ipynb  letsgo.py  (+14 more)
(+530 files in other folders)
