[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comparative-gsa"
version = "0.1.0"
authors = [
  { name = "Saad Yonis", email = "syonis@turing.ac.uk" },
  { name = "Levan Bokeria", email = "levan.bokeria@gmail.com" }
]

description = "Comparing different emulators for GSA."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "ModularCirc",
    "pytest",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "pytest >=6",
  "pytest-cov >=3",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/alan-turing-institute/comparative-gsa"
"Bug Tracker" = "https://github.com/alan-turing-institute/comparative-gsa/issues"
Discussions = "https://github.com/alan-turing-institute/comparative-gsa/discussions"
Changelog = "https://github.com/alan-turing-institute/comparative-gsa/releases"